// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Credentials Component should handle multiple display states, pending, error, fulfilled: error 1`] = `
<EmptyState
  className="quipucords-empty-state__alert"
>
  <Alert
    title="t(view.error, {})"
    variant="danger"
  >
    t(view.error-message, {"context":""})
  </Alert>
</EmptyState>
`;

exports[`Credentials Component should handle multiple display states, pending, error, fulfilled: fulfilled 1`] = `
<div
  className="quipucords-content"
>
  <div
    className="quipucords-view-container"
  >
    <React.Fragment>
      <ViewToolbar
        lastRefresh={NaN}
        secondaryFields={
          [
            <AddCredentialType
              buttonVariant="primary"
              options={
                [
                  {
                    "title": [Function],
                    "value": "network",
                  },
                  {
                    "title": [Function],
                    "value": "openshift",
                  },
                  {
                    "title": [Function],
                    "value": "rhacs",
                  },
                  {
                    "title": [Function],
                    "value": "satellite",
                  },
                  {
                    "title": [Function],
                    "value": "vcenter",
                  },
                  {
                    "title": [Function],
                    "value": "ansible",
                  },
                ]
              }
              ouiaId="add_credential"
              placeholder="t(form-dialog.label, {"context":"add"})"
              position="right"
              t={[Function]}
              useOnSelect={[Function]}
            />,
            <Button
              isDisabled={true}
              onClick={[Function]}
              variant="secondary"
            >
              t(form-dialog.label, {"context":"delete"})
            </Button>,
          ]
        }
        t={[Function]}
        useOnRefresh={[Function]}
        useSelector={[Function]}
        useToolbarFieldClear={[Function]}
        useToolbarFieldClearAll={[Function]}
        useView={[Function]}
      />
      <ViewPaginationRow
        totalResults={0}
        useOnPerPageSelect={[Function]}
        useOnSetPage={[Function]}
        useQuery={[Function]}
      />
    </React.Fragment>
    <div
      className="quipucords-list-container"
    >
      <Table
        ariaLabel="t(table.ariaLabel)"
        className=""
        columnHeaders={[]}
        componentClassNames={
          {
            "table": "quipucords-table",
            "td": "quipucords-table__td",
            "tdAction": "quipucords-table__td-action",
            "tdExpand": "quipucords-table__td-expand",
            "tdExpanded": "quipucords-table__td-expand-expanded",
            "tdExpandedContent": "quipucords-table__td-expand-content",
            "tdExpandedWrapper": "quipucords-table__td-expand-wrapper",
            "tdSelect": "quipucords-table__td-select",
            "th": "quipucords-table__th",
            "tr": "quipucords-table__tr",
            "trExpand": "quipucords-table__tr-expand",
            "trExpanded": "quipucords-table__tr-expand-expanded",
            "trExpandedContent": "quipucords-table__tr-expand-content",
          }
        }
        isBorders={true}
        isHeader={false}
        isStriped={false}
        onExpand={[Function]}
        onSelect={[Function]}
        onSort={null}
        rows={
          [
            {
              "cells": [
                {
                  "content": <Grid
                    hasGutter={false}
                  >
                    <GridItem
                      sm={2}
                    >
                      <Tooltip
                        content="t(table.label, {"context":""})"
                        delayShow={500}
                        id={null}
                        isPopover={false}
                        placement="top"
                      >
                        <ContextIcon
                          size="sm"
                          symbol={null}
                        />
                      </Tooltip>
                    </GridItem>
                    <GridItem
                      sm={10}
                    >
                      <div>
                        <strong
                          data-test="item_name"
                        >
                          lorem
                        </strong>
                      </div>
                    </GridItem>
                  </Grid>,
                  "dataLabel": "t(table.header, {"context":"description"})",
                  "width": 35,
                },
                {
                  "content": <Tooltip
                    content="t(table.label_auth, {"context":"tooltip"})"
                    delayShow={500}
                    id={null}
                    isPopover={false}
                    placement="top"
                  >
                    t(table.label_auth, {"context":"cell"})
                  </Tooltip>,
                  "dataLabel": "t(table.header, {"context":"auth-type"})",
                },
                {
                  "content": <Tooltip
                    content="t(table.label_status_tooltip, {"context":"sources","count":0})"
                    delayShow={500}
                    id={null}
                    isPopover={false}
                    placement="top"
                  >
                    t(table.label_status, {"context":"cell","count":0}, [object Object],[object Object])
                  </Tooltip>,
                  "dataLabel": "t(table.header, {"context":"sources"})",
                  "expandedContent": undefined,
                  "isExpanded": false,
                  "width": 8,
                },
                {
                  "content": <OverflowMenu
                    breakpoint="lg"
                  >
                    <OverflowMenuContent>
                      <OverflowMenuGroup
                        groupType="button"
                      >
                        <OverflowMenuItem>
                          <Tooltip
                            content="t(table.label, {"context":"view"})"
                            delayShow={500}
                            id={null}
                            isPopover={false}
                            placement="top"
                          >
                            <Button
                              aria-label="t(table.label, {"context":"view"})"
                              className="quipucords-view__row-button"
                              onClick={[Function]}
                              variant="plain"
                            >
                              <EyeIcon />
                            </Button>
                          </Tooltip>
                        </OverflowMenuItem>
                        <OverflowMenuItem>
                          <Tooltip
                            content="t(table.label, {"context":"delete"})"
                            delayShow={500}
                            id={null}
                            isPopover={false}
                            placement="top"
                          >
                            <Button
                              aria-label="t(table.label, {"context":"delete"})"
                              className="quipucords-view__row-button"
                              onClick={[Function]}
                              variant="plain"
                            >
                              <TrashIcon />
                            </Button>
                          </Tooltip>
                        </OverflowMenuItem>
                      </OverflowMenuGroup>
                    </OverflowMenuContent>
                    <OverflowMenuControl>
                      <DropdownSelect
                        ariaLabel="Select option"
                        buttonVariant="plain"
                        className=""
                        direction="down"
                        id="generatedid-"
                        isDisabled={false}
                        isDropdownButton={true}
                        isFlipEnabled={false}
                        isInline={true}
                        isToggleText={true}
                        maxHeight={null}
                        name={null}
                        onSelect={[Function]}
                        onSplitButton={[Function]}
                        options={
                          [
                            {
                              "title": "t(table.label, {"context":"edit"})",
                              "value": "edit",
                            },
                            {
                              "title": "t(table.label, {"context":"delete"})",
                              "value": "delete",
                            },
                          ]
                        }
                        placeholder={<EllipsisVIcon />}
                        position="right"
                        selectedOptions={null}
                        splitButtonVariant={null}
                        toggleIcon={null}
                        variant="single"
                      />
                    </OverflowMenuControl>
                  </OverflowMenu>,
                  "isActionCell": true,
                  "style": {
                    "textAlign": "right",
                  },
                },
              ],
              "isSelected": false,
              "item": {
                "id": "1",
                "name": "lorem",
              },
            },
          ]
        }
        summary="t(table.summary)"
        variant="compact"
      >
        <EmptyState
          className="quipucords-empty-state"
          variant="lg"
        >
          <EmptyStateHeader
            headingLevel="h1"
            icon={
              <EmptyStateIcon
                icon={[Function]}
              />
            }
            titleText={
              <React.Fragment>
                t(view.empty-state_filter, {"context":"title"})
              </React.Fragment>
            }
          />
          <EmptyStateBody>
            t(view.empty-state_filter, {"context":"description"})
          </EmptyStateBody>
          <EmptyStateFooter>
            <EmptyStateActions>
              <Button
                onClick={[Function]}
                variant="link"
              >
                t(view.empty-state_label, {"context":"clear"})
              </Button>
            </EmptyStateActions>
          </EmptyStateFooter>
        </EmptyState>
      </Table>
    </div>
  </div>
</div>
`;

exports[`Credentials Component should handle multiple display states, pending, error, fulfilled: pending 1`] = `
<Modal
  aria-label={null}
  backdrop={false}
  className={null}
  disableFocusTrap={true}
  footer={null}
  header={null}
  isContentOnly={false}
  isOpen={true}
  position="top"
  positionOffset="5%"
  showClose={false}
  t={[Function]}
  variant="medium"
>
  <Bullseye>
    <Spinner
      size="lg"
    />
       
    t(view.loading, {})
  </Bullseye>
</Modal>
`;

exports[`Credentials Component should render a basic component: basic 1`] = `
<div
  className="quipucords-content"
>
  <div
    className="quipucords-view-container"
  >
    <div
      className="quipucords-list-container"
    >
      <Table
        ariaLabel="t(table.ariaLabel)"
        className=""
        columnHeaders={[]}
        componentClassNames={
          {
            "table": "quipucords-table",
            "td": "quipucords-table__td",
            "tdAction": "quipucords-table__td-action",
            "tdExpand": "quipucords-table__td-expand",
            "tdExpanded": "quipucords-table__td-expand-expanded",
            "tdExpandedContent": "quipucords-table__td-expand-content",
            "tdExpandedWrapper": "quipucords-table__td-expand-wrapper",
            "tdSelect": "quipucords-table__td-select",
            "th": "quipucords-table__th",
            "tr": "quipucords-table__tr",
            "trExpand": "quipucords-table__tr-expand",
            "trExpanded": "quipucords-table__tr-expand-expanded",
            "trExpandedContent": "quipucords-table__tr-expand-content",
          }
        }
        isBorders={true}
        isHeader={false}
        isStriped={false}
        onExpand={[Function]}
        onSelect={[Function]}
        onSort={null}
        rows={[]}
        summary="t(table.summary)"
        variant="compact"
      >
        <CredentialsEmptyState
          onAddSource={[Function]}
          t={[Function]}
          uiSentenceStartName="The Quipucords tool"
          uiShortName="Quipucords"
          viewId="credentials"
        />
      </Table>
    </div>
  </div>
</div>
`;

exports[`Credentials Component should return an empty state when there are no credentials: empty state, filtering active 1`] = `
<div
  className="quipucords-content"
>
  <div
    className="quipucords-view-container"
  >
    <React.Fragment>
      <ViewToolbar
        lastRefresh={NaN}
        secondaryFields={
          [
            <AddCredentialType
              buttonVariant="primary"
              options={
                [
                  {
                    "title": [Function],
                    "value": "network",
                  },
                  {
                    "title": [Function],
                    "value": "openshift",
                  },
                  {
                    "title": [Function],
                    "value": "rhacs",
                  },
                  {
                    "title": [Function],
                    "value": "satellite",
                  },
                  {
                    "title": [Function],
                    "value": "vcenter",
                  },
                  {
                    "title": [Function],
                    "value": "ansible",
                  },
                ]
              }
              ouiaId="add_credential"
              placeholder="t(form-dialog.label, {"context":"add"})"
              position="right"
              t={[Function]}
              useOnSelect={[Function]}
            />,
            <Button
              isDisabled={true}
              onClick={[Function]}
              variant="secondary"
            >
              t(form-dialog.label, {"context":"delete"})
            </Button>,
          ]
        }
        t={[Function]}
        useOnRefresh={[Function]}
        useSelector={[Function]}
        useToolbarFieldClear={[Function]}
        useToolbarFieldClearAll={[Function]}
        useView={[Function]}
      />
      <ViewPaginationRow
        totalResults={0}
        useOnPerPageSelect={[Function]}
        useOnSetPage={[Function]}
        useQuery={[Function]}
      />
    </React.Fragment>
    <div
      className="quipucords-list-container"
    >
      <Table
        ariaLabel="t(table.ariaLabel)"
        className=""
        columnHeaders={[]}
        componentClassNames={
          {
            "table": "quipucords-table",
            "td": "quipucords-table__td",
            "tdAction": "quipucords-table__td-action",
            "tdExpand": "quipucords-table__td-expand",
            "tdExpanded": "quipucords-table__td-expand-expanded",
            "tdExpandedContent": "quipucords-table__td-expand-content",
            "tdExpandedWrapper": "quipucords-table__td-expand-wrapper",
            "tdSelect": "quipucords-table__td-select",
            "th": "quipucords-table__th",
            "tr": "quipucords-table__tr",
            "trExpand": "quipucords-table__tr-expand",
            "trExpanded": "quipucords-table__tr-expand-expanded",
            "trExpandedContent": "quipucords-table__tr-expand-content",
          }
        }
        isBorders={true}
        isHeader={false}
        isStriped={false}
        onExpand={[Function]}
        onSelect={[Function]}
        onSort={null}
        rows={[]}
        summary="t(table.summary)"
        variant="compact"
      >
        <EmptyState
          className="quipucords-empty-state"
          variant="lg"
        >
          <EmptyStateHeader
            headingLevel="h1"
            icon={
              <EmptyStateIcon
                icon={[Function]}
              />
            }
            titleText={
              <React.Fragment>
                t(view.empty-state_filter, {"context":"title"})
              </React.Fragment>
            }
          />
          <EmptyStateBody>
            t(view.empty-state_filter, {"context":"description"})
          </EmptyStateBody>
          <EmptyStateFooter>
            <EmptyStateActions>
              <Button
                onClick={[Function]}
                variant="link"
              >
                t(view.empty-state_label, {"context":"clear"})
              </Button>
            </EmptyStateActions>
          </EmptyStateFooter>
        </EmptyState>
      </Table>
    </div>
  </div>
</div>
`;

exports[`Credentials Component should return an empty state when there are no credentials: empty state, no data 1`] = `
<div
  className="quipucords-content"
>
  <div
    className="quipucords-view-container"
  >
    <div
      className="quipucords-list-container"
    >
      <Table
        ariaLabel="t(table.ariaLabel)"
        className=""
        columnHeaders={[]}
        componentClassNames={
          {
            "table": "quipucords-table",
            "td": "quipucords-table__td",
            "tdAction": "quipucords-table__td-action",
            "tdExpand": "quipucords-table__td-expand",
            "tdExpanded": "quipucords-table__td-expand-expanded",
            "tdExpandedContent": "quipucords-table__td-expand-content",
            "tdExpandedWrapper": "quipucords-table__td-expand-wrapper",
            "tdSelect": "quipucords-table__td-select",
            "th": "quipucords-table__th",
            "tr": "quipucords-table__tr",
            "trExpand": "quipucords-table__tr-expand",
            "trExpanded": "quipucords-table__tr-expand-expanded",
            "trExpandedContent": "quipucords-table__tr-expand-content",
          }
        }
        isBorders={true}
        isHeader={false}
        isStriped={false}
        onExpand={[Function]}
        onSelect={[Function]}
        onSort={null}
        rows={[]}
        summary="t(table.summary)"
        variant="compact"
      >
        <CredentialsEmptyState
          onAddSource={[Function]}
          t={[Function]}
          uiSentenceStartName="The Quipucords tool"
          uiShortName="Quipucords"
          viewId={null}
        />
      </Table>
    </div>
  </div>
</div>
`;
